fix(storefront): BACK-772 Fix shipping expectation message alignment

--- a/assets/scss/components/stencil/cart/_cart.scss
+++ b/assets/scss/components/stencil/cart/_cart.scss
@@ -444,6 +444,7 @@ $card-preview-zoom-bottom-offset:       6rem;
 // in both the legacy and multi-coupon (enhanced) cart layouts.
 .cart-shipping-expectation-message {
     clear: both;
+    text-align: left;
     width: 100%;
     margin: 0;
 }
